# AGENTIC-LANGGRAPH

./: README.md  pyproject.toml  requirments.txt
MCP/: client.py  mathserver.py  weatherserver.py
agentic ChatBot langgraph/: Basic_chatbot.ipynb
